[package]
name = "web-rwkv-converter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9"
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }

[dependencies.web-rwkv-converter]
git = "https://github.com/cryscan/web-rwkv-converter"
tag = "v0.1.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
